--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -2,8 +2,12 @@
     <mat-tab label="Users">
         <app-admin-users></app-admin-users>
     </mat-tab>
-    <mat-tab label="Datasets">Content 2</mat-tab>
-    <mat-tab label="Repositories">Content 3</mat-tab>
+  <mat-tab label="Datasets">
+    <app-admin-datasets></app-admin-datasets>
+  </mat-tab>
+  <mat-tab label="Repositories">
+    <app-admin-repositories></app-admin-repositories>
+  </mat-tab>
     <mat-tab label="Instances">Content 3</mat-tab>
     <mat-tab label="Compliances">Content 3</mat-tab>
     <mat-tab label="Missions">Content 3</mat-tab>
