--- a/src/styles.scss
+++ b/src/styles.scss
@@ -55,3 +55,8 @@ body {
 .background-transparent {
   background-color: transparent;
 }
+
+.btn-danger {
+  background-color: red !important;
+  color: white !important;
+}
