--- a/src/app/components/user-section/user-section.component.html
+++ b/src/app/components/user-section/user-section.component.html
@@ -14,7 +14,8 @@
           class="user-section__button cursor-pointer background-transparent">
     <mat-icon aria-hidden="false" fontIcon="logout"></mat-icon>
   </button>
-  <button (click)="this.displayChangeLanguageModal()" class="user-section__button cursor-pointer">
+  <button (click)="this.displayChangeLanguageModal()"
+          class="user-section__button cursor-pointer background-transparent">
     <mat-icon aria-hidden="false" fontIcon="language"></mat-icon>
   </button>
 </div>
