--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -15,7 +15,9 @@
     <app-admin-compliance *ngIf="compliance.isActive"></app-admin-compliance>
   </mat-tab>
   <mat-tab #missions label="Missions">
-    <app-admin-mission *ngIf="missions.isActive"></app-admin-mission>
+    <app-admin-missions *ngIf="missions.isActive"></app-admin-missions>
   </mat-tab>
-  <mat-tab #fair label="FAIR Principles">Content 3</mat-tab>
+  <mat-tab #fair label="FAIR Principles">
+    <app-admin-fair-principles *ngIf="fair.isActive"></app-admin-fair-principles>
+  </mat-tab>
 </mat-tab-group>
