--- a/src/app/components/raise-dataset/raise-dataset.component.html
+++ b/src/app/components/raise-dataset/raise-dataset.component.html
@@ -1,34 +1,47 @@
 <form (ngSubmit)="onSubmit()" *transloco="let t; prefix: 'raiseDataset'" [formGroup]="datasetForm" novalidate>
-  <mat-stepper #stepper linear="true">
-    <mat-step label="{{ t('introduction') }}" state="number">
-      <app-raise-dataset-intro></app-raise-dataset-intro>
-      <div *transloco="let t; prefix: 'common'">
-        <button mat-button matStepperNext type="button">{{ t('next') }}</button>
-      </div>
-    </mat-step>
-    <mat-step *ngIf="this.mode != RAISE_MODE.ADD_REPOSITORY" [stepControl]="datasetForm" label="{{ t('dataset') }}" state="edit">
-      <app-raise-dataset-form-1 [parentGroup]="datasetForm" [isRescue]="this.mode==RAISE_MODE.RESCUE" ></app-raise-dataset-form-1>
-      <div *transloco="let t; prefix: 'common'">
-        <button mat-button matStepperPrevious type="button">{{ t('back') }}</button>
-        <button mat-button matStepperNext type="button">{{ t('next') }}</button>
-      </div>
-    </mat-step>
-    <mat-step [stepControl]="repositoryForm" label="{{ t('repository') }}">
-      <app-raise-dataset-form-2 [parentGroup]="repositoryForm"></app-raise-dataset-form-2>
-      <div>
-        <button mat-button matStepperPrevious type="button" *transloco="let t; prefix: 'common'">{{ t('back') }}</button>
-        <button (click)="this.onSubmit()" *ngIf="repositoryForm.valid" mat-button
-                type="button">{{ t('create_button') }}
-        </button>
-      </div>
-    </mat-step>
-    <mat-step label="{{ t('result') }}">
-      <div>
-        {{ t('congratulations_message') }}
-      </div>
-      <div>
-        <button (click)="this.onSubmit()" mat-button type="button">{{ t('dashboard_button') }}</button>
-      </div>
-    </mat-step>
-  </mat-stepper>
+  <div class="stepper">
+    <mat-stepper #stepper linear="true">
+      <mat-step label="{{ t('introduction') }}" state="number">
+        <app-raise-dataset-intro></app-raise-dataset-intro>
+        <div *transloco="let t; prefix: 'common'" class="button_div">
+          <button mat-flat-button matStepperNext type="button">{{ t('next') }}</button>
+        </div>
+      </mat-step>
+      <mat-step *ngIf="this.mode != RAISE_MODE.ADD_REPOSITORY" [stepControl]="datasetForm" label="{{ t('dataset') }}"
+                state="edit">
+        <app-raise-dataset-form-1 [isRescue]="this.mode==RAISE_MODE.RESCUE"
+                                  [parentGroup]="datasetForm"></app-raise-dataset-form-1>
+        <div *transloco="let t; prefix: 'common'" class="button_div">
+          <button mat-flat-button matStepperPrevious type="button">{{ t('back') }}</button>
+          <button mat-flat-button matStepperNext type="button">{{ t('next') }}</button>
+        </div>
+      </mat-step>
+      <mat-step [stepControl]="repositoryForm" label="{{ t('repository') }}">
+        <app-raise-dataset-form-2 [parentGroup]="repositoryForm"></app-raise-dataset-form-2>
+        <div class="button_div">
+          <button *transloco="let t; prefix: 'common'" mat-flat-button matStepperPrevious
+                  type="button">{{ t('back') }}
+          </button>
+          <button (click)="this.onSubmit()" *ngIf="repositoryForm.valid" mat-flat-button
+                  type="button">{{ t('create_button') }}
+          </button>
+        </div>
+      </mat-step>
+      <mat-step label="{{ t('result') }}">
+        <div>
+          <p>
+            {{ t('congratulations_message') }}
+          </p>
+          <p *ngIf="this.datasetInstanceId">
+            <a [routerLink]="['/instance',this.datasetInstanceId]">{{ t('dataset_instance_information') }}</a>
+          </p>
+        </div>
+        <div class="button_div">
+          <button (click)="this.onSubmit()" mat-flat-button type="button">{{ t('dashboard_button') }}</button>
+        </div>
+      </mat-step>
+    </mat-stepper>
+  </div>
+
+
 </form>
